fixed layout problem

--- a/src/App.css
+++ b/src/App.css
@@ -63,6 +63,9 @@ input::placeholder {
     font-size: 0.9rem;
 }
 
+input {
+    color: var(--dark-color);
+}
 .header__user-info {
     display: flex;
     align-items: center;
@@ -240,21 +243,24 @@ input::placeholder {
 }
 
 .banner-info {
-    width: 50rem;
-    margin-left: 5rem;
+    margin-left: 2rem;
+    height: 100%;
+    width: 50%;
+    padding: 5rem;
+    flex: 1;
 }
 
+.image-holder {
+    width: 50%;
+    height: 100%;
+}
 
 .image-holder img {
-    right: 20px;
-    width: 70%;
-    bottom: 0;
-    right: 0;
-    position: absolute;
-    margin: 0;
-    padding: 0;
-    z-index: 2;
+    position: relative;
     object-fit: cover;
+    z-index: 2;
+    width: 100%;
+    height: 100%;
 }
 
 .banner-info h2 {
@@ -266,7 +272,7 @@ input::placeholder {
 
 .banner-info h1 {
     font-weight: bolder;
-    font-size: 6rem;
+    font-size: 5rem;
     width: fit-content;
     color: var(--light);
 }
@@ -300,16 +306,29 @@ input::placeholder {
     font-size: 0.8rem;
     display: none;
     width: auto;
-    text-align: center;
+    justify-content: center;
     align-items: flex-start;
     border-radius: 1.5rem;
     transition: .3s ease-in-out;
     margin-top: 1rem;
 }
 
+.arrow {
+    background-color: #fbf8f822;
+    border-radius: 46%;
+    color: var(--light);
+    margin-left: 1.5rem;
+    padding: 5px;
+}  
+
+.arrow-icon {
+    font-size: 1.2rem !important;
+}
+
 .product:hover .btn {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 .product:hover .product-details {
@@ -328,13 +347,20 @@ input::placeholder {
     background-color: var(--dark-color);
     padding: 1rem 2rem;
     font-size: 0.8rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     border-radius: 0.5rem;
-    width: fit-content;
     transition: .3s ease;
 }
 
 .btn:hover {
     background-color: #495c32;
+    
+}
+
+.banner__btn:hover {
+    transform: scale(1.02);
 }
 
 
@@ -353,12 +379,13 @@ input::placeholder {
 .product {
     background-color: white;
     display: flex;
-    padding: 0;
+    padding: 0.5rem 0;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     border-radius: 0.5rem;
 }
+
 
 .product img {
     width: 50%;
@@ -750,10 +777,14 @@ i {
        display: flex;
        height: 32rem;
     }
+
+    .banner-info {
+        padding: 3rem 1rem;
+    }
     
     .banner-info h1 {
         margin: 0 0 2rem;
-        font-size: 4rem;
+        font-size: 3rem;
         line-height: 6rem;
         width: fit-content;
     }
@@ -985,14 +1016,18 @@ i {
     .banner-info {
        margin: 0;
        display: flex;
+       padding: 2rem;
        justify-content: center;
        flex-direction: column; 
     }
 
-    .image-holder img {
+    .image-holder {
         display: none;
     }
-
+    
+    .banner__btn {
+        width: 100%;
+    }
 
     .banner-info h2 {
         font-size: 2rem;
@@ -1026,10 +1061,6 @@ i {
     }
     
 
-    .banner__btn {
-        width: max-content;
-        margin: 0 30%;
-    }
 
     .cart {
         margin: 0;
@@ -1199,6 +1230,10 @@ i {
         justify-content: space-between;
     }
 
+
+    .center {
+        padding: 0;
+    }
    .center .contact {
     display: flex;
     flex-direction: column;
